<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_menu_ma_cuisine" android:title="@string/ma_cuisine" android:icon="@drawable/ic_home" />
        <item android:id="@+id/nav_menu_utilisateurs" android:title="@string/users" android:icon="@drawable/ic_group"/>
        <item android:id="@+id/nav_menu_recettes" android:title="@string/recettes" android:icon="@drawable/ic_room_service"/>
        <item android:id="@+id/nav_menu_ingredients" android:title="@string/ingredients" android:icon="@drawable/ic_local_dining"/>
        <item
            android:id="@+id/nav_menu_parametres"
            android:icon="@drawable/ic_settings"
            android:title="@string/parametres" />
        <item
            android:id="@+id/nav_menu_deconnexion"
            android:icon="@drawable/ic_power_settings"
            android:title="@string/deconnexion" />

    </group>
</menu>
